# vpi-apriltag-wrapper

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  pyproject.toml
scripts/: publish_wheel.sh
src/: bindings.cpp  corner_order.cpp  corner_order.hpp  detector.cpp  detector.hpp  preprocess.cpp  preprocess.hpp
tests/: conftest.py  test_corners.cpp  test_detector.py
vpi_apriltag_detector/: __init__.py  __init__.pyi  _vpi_apriltag_detector.pyi
